--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,14 @@
 			<version>2.9.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.squareup.retrofit2/adapter-rxjava3 -->
+<!--		<dependency>-->
+<!--			<groupId>com.squareup.retrofit2</groupId>-->
+<!--			<artifactId>adapter-rxjava3</artifactId>-->
+<!--			<version>2.9.0</version>-->
+<!--		</dependency>-->
+
+
 		<dependency>
 			<groupId>com.squareup.okhttp3</groupId>
 			<artifactId>logging-interceptor</artifactId>
@@ -77,6 +85,14 @@
 			<artifactId>okhttp</artifactId>
 			<version>4.9.1</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.projectreactor.addons/reactor-adapter -->
+		<dependency>
+			<groupId>io.projectreactor.addons</groupId>
+			<artifactId>reactor-adapter</artifactId>
+			<version>3.0.2.RELEASE</version>
+		</dependency>
+
 
 
 
